--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                     <div class="info-item" style="--i:0;">
                         <h2>Carabina IMBEL IA2</h2>
                         <p>A CARABINA IMBEL 7,62 IA2 possui cano menor do que um fuzil tradicional, permitindo maior portabilidade porém mantendo a precisão nas distâncias de utilização, opera em regime de tiro semiautomático, isto é, realiza tiros intermitentes. A coronha, em polímero, permite a realização de tiro também na posição rebatida.</p>
-                        <a href="https://www.policiamilitar.mg.gov.br/" class="btn">Site da PMMG</a>
                     </div>
                 </div>
             </div>
@@ -37,7 +36,6 @@
                     <div class="info-item" style="--i:1;">
                         <h2>Fuzil MD2A1</h2>
                         <p>O Fuzil MD2A1 é uma arma de fogo desenvolvida no Brasil, conhecida por sua confiabilidade e precisão. Utiliza cartuchos de calibre 5,56x45mm NATO, adaptando-se a diferentes cenários de combate. Sua construção robusta e ergonomia avançada o tornam uma escolha popular entre as forças armadas e policiais.</p>
-                        <a href="https://www.policiamilitar.mg.gov.br/" class="btn">Site da PMMG</a>
                     </div>
                 </div>
             </div>
@@ -56,8 +54,7 @@
                 <div class="info-slider">
                     <div class="info-item" style="--i:2;">
                         <h2>MP5KA4</h2>
-                        <p>A MP5KA4 é uma versão compacta da icônica submetralhadora MP5, projetada pela Heckler & Koch. Com um comprimento reduzido e um design ergonômico, é ideal para operações de combate em ambientes fechados. Utiliza munição de 9x19mm Parabellum, oferecendo alta precisão e confiabilidade.</p>
-                        <a href="https://www.policiamilitar.mg.gov.br/" class="btn">Site da PMMG</a>
+                        <p>A MP5KA4 é uma versão compacta da icônica submetralhadora MP5, projetada pela Heckler & Koch. Com um comprimento reduzido e um design ergonômico, é ideal para operações de combate em ambientes fechados. Utiliza munição de 9x19mm Parabellum, oferecendo alta precisão e confiabilidade.</p> 
                     </div>
                 </div>
             </div>
@@ -77,7 +74,6 @@
                     <div class="info-item" style="--i:3;">
                         <h2>MP5A5</h2>
                         <p>A MP5A5 é uma versão aprimorada da famosa submetralhadora MP5, desenvolvida pela Heckler & Koch. Destaca-se por seu design ergonômico e sua capacidade de disparar munição de 9x19mm Parabellum com alta precisão. Equipado com um estoque retrátil, oferece flexibilidade e facilidade de manuseio em operações táticas.</p>
-                        <a href="https://www.policiamilitar.mg.gov.br/" class="btn">Site da PMMG</a>
                     </div>
                 </div>
             </div>
@@ -97,7 +93,6 @@
                     <div class="info-item" style="--i:4;">
                         <h2>MP5SD6</h2>
                         <p>A MP5SD6 é uma submetralhadora de origem alemã, desenvolvida pela Heckler & Koch. Notável por seu sistema de supressor integrado, a MP5SD6 é eficaz em operações que exigem discrição e precisão. Seu design compacto e leve torna-a ideal para equipes de intervenção e operações especiais.</p>
-                        <a href="https://www.policiamilitar.mg.gov.br/" class="btn">Site da PMMG</a>
                     </div>
                 </div>
             </div>
@@ -110,6 +105,25 @@
             </div>
         </div>
 
+        <div class="item">
+            <div class="bg"></div>
+            <div class="info-box">
+                <div class="info-slider">
+                    <div class="info-item" style="--i:5;">
+                        <h2>PSG1</h2>
+                        <p>A PSG1 é uma renomada arma de precisão desenvolvida pela Heckler & Koch, conhecida por sua alta precisão e confiabilidade. Projetada para uso em situações de longo alcance, ela é frequentemente utilizada por forças policiais e militares em operações especiais. Seu sistema de ação por ferrolho e seu design ergonômico fazem dela uma escolha preferida para atiradores de elite.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="img-box">
+                <div class="img-slider">
+                    <div class="img-item" style="--i:5;">
+                        <img src="PSG1.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <ul class="thumb">
             <li class="selected"><img src="carabina imbel 2-removebg-preview.jpg"></li>
@@ -117,6 +131,7 @@
             <li><img src="mp5ka4 2-removebg-preview.jpg"></li>
             <li><img src="mp5a5 2-removebg-preview.jpg"></li>
             <li><img src="MP5SD6 2.png"></li>
+            <li><img src="PSG1 2.png"></li>
         </ul>
     </div>
 
