--- a/index.html
+++ b/index.html
@@ -124,6 +124,26 @@
             </div>
         </div>
 
+        <div class="item">
+            <div class="bg"></div>
+            <div class="info-box">
+                <div class="info-slider">
+                    <div class="info-item" style="--i:6;">
+                        <h2>Mauser 1908</h2>
+                        <p>O Fuzil Mauser Modelo 1908 é uma arma icônica desenvolvida pela Mauser, famosa por sua robustez e precisão. Utilizado principalmente pelas forças armadas brasileiras, ele se destacou por seu calibre potente e mecanismo de ferrolho confiável. O design do Mauser 1908 influenciou diversos rifles militares ao longo do século XX.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="img-box">
+                <div class="img-slider">
+                    <div class="img-item" style="--i:6;">
+                        <img src="mauser 1908 (1).png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
         <ul class="thumb">
             <li class="selected"><img src="carabina imbel 2-removebg-preview.jpg"></li>
@@ -132,6 +152,7 @@
             <li><img src="mp5a5 2-removebg-preview.jpg"></li>
             <li><img src="MP5SD6 2.png"></li>
             <li><img src="PSG1 2.png"></li>
+            <li><img src="mauser 1908 (2).png"></li>
         </ul>
     </div>
 
