--- a/index.html
+++ b/index.html
@@ -143,6 +143,63 @@
             </div>
         </div>
 
+        <div class="item">
+            <div class="bg"></div>
+            <div class="info-box">
+                <div class="info-slider">
+                    <div class="info-item" style="--i:7;">
+                        <h2>SMT9</h2>
+                        <p>A submetralhadora SMT9 é uma arma compacta e versátil desenvolvida pela Taurus, ideal para operações de curta distância e ambientes urbanos. Seu design moderno e sua capacidade de disparo rápido a tornam eficaz em situações de combate intenso. A SMT9 combina potência e manuseio ágil, tornando-a uma escolha popular entre forças de segurança e militares.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="img-box">
+                <div class="img-slider">
+                    <div class="img-item" style="--i:7;">
+                        <img src="SMT9.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="bg"></div>
+            <div class="info-box">
+                <div class="info-slider">
+                    <div class="info-item" style="--i:8;">
+                        <h2>12 Military</h2>
+                        <p>A espingarda calibre 12 Military é uma arma robusta e confiável, projetada para suportar condições adversas e uso intenso. Comumente utilizada por forças armadas e policiais, sua potência e versatilidade a tornam eficaz em combate próximo e operações táticas. Seu design durável e a capacidade de disparar diferentes tipos de munição a tornam uma escolha prática para situações de alta exigência.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="img-box">
+                <div class="img-slider">
+                    <div class="img-item" style="--i:8;">
+                        <img src="12 MILITARY.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="bg"></div>
+            <div class="info-box">
+                <div class="info-slider">
+                    <div class="info-item" style="--i:9;">
+                        <h2 class="h2final">Obrigado pela atenção!</h2>
+                        <p class="pfinal">Feito por João Gabriel Sülz Megale</p>
+                    </div>
+                </div>
+            </div>
+            <div class="img-box">
+                <div class="img-slider">
+                    <div class="img-item" style="--i:9;">
+                        <img src="ctpm logo.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
         <ul class="thumb">
@@ -153,6 +210,9 @@
             <li><img src="MP5SD6 2.png"></li>
             <li><img src="PSG1 2.png"></li>
             <li><img src="mauser 1908 (2).png"></li>
+            <li><img src="SMT9 2.png"></li>
+            <li><img src="12 MILITARY 2.png"></li>
+            <li><img src="ctpm logo.png"></li>
         </ul>
     </div>
 
