--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div class="info-slider">
                     <div class="info-item" style="--i:9;">
                         <h2 class="h2final">Obrigado pela atenção!</h2>
-                        <p class="pfinal">Feito por João Gabriel Sülz Megale</p>
+                        <p class="pfinal">Feito por João Gabriel Sülz Megale - Turma 902</p>
                     </div>
                 </div>
             </div>
