--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="info-box">
                 <div class="info-slider">
                     <div class="info-item" style="--i:0;">
-                        <h2>Carabina IMBEL IA2</h2>
+                        <h2>IMBEL IA2</h2>
                         <p>A CARABINA IMBEL 7,62 IA2 possui cano menor do que um fuzil tradicional, permitindo maior portabilidade porém mantendo a precisão nas distâncias de utilização, opera em regime de tiro semiautomático, isto é, realiza tiros intermitentes. A coronha, em polímero, permite a realização de tiro também na posição rebatida.</p>
                     </div>
                 </div>
