--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
             <div class="info-box">
                 <div class="info-slider">
                     <div class="info-item" style="--i:9;">
-                        <h2 class="h2final">Obrigado pela atenção!</h2>
-                        <p class="pfinal">Feito por João Gabriel Sülz Megale - Turma 902</p>
+                        <h2 class="h2final">Quiz</h2>
+                        <p class="pfinal">Escaneeie o QR Code para ir direto para o nosso quiz sobre as armas!</p>
 <a><button class="btn">Quiz CTPM</button></a>
                     </div>
                 </div>
