--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <li><img src="mauser 1908 (2).png"></li>
             <li><img src="SMT9 2.png"></li>
             <li><img src="12 MILITARY 2.png"></li>
-            <li><img src="ctpm logo.png"></li>
+            <li><img src="chart.png"></li>
         </ul>
     </div>
 
