--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="img-box">
                 <div class="img-slider">
                     <div class="img-item" style="--i:9;">
-                        <img src="ctpm logo.png">
+                        <img src="chart.png">
                     </div>
                 </div>
             </div>
